--- a/style.css
+++ b/style.css
@@ -34,11 +34,10 @@ header {
   max-width: 900px;
   background-color: var(--white);
   padding: 50px;
-  border-radius: 20px;
+  border-radius: 25px;
   display: flex;
   align-items: center;
   gap: 20px;
-  /* justify-content: space-between; */
 }
 
 .input-display,
@@ -72,7 +71,7 @@ header {
   background-color: transparent;
   color: inherit;
   font-family: inherit;
-  font-size: 24px;
+  font-size: 1.5rem;
   font-weight: 700;
   text-align: right;
   border: none;
@@ -120,7 +119,7 @@ header {
   align-items: center;
   justify-content: center;
   border-radius: 5px;
-  font-size: 24px;
+  font-size: 1.5rem;
   cursor: pointer;
 }
 
@@ -138,7 +137,7 @@ header {
   border: none;
   text-align: right;
   color: var(--very-dark-cyan);
-  font-size: 24px;
+  font-size: 1rem;
   font-weight: inherit;
 }
 
@@ -169,8 +168,8 @@ header {
   margin-bottom: 50px;
 }
 
-.output-display .total.bill-total {
-  margin-bottom: 120px;
+.output-display .btn {
+  margin-top: 120px;
 }
 
 .output-display .total .text {
@@ -184,20 +183,21 @@ header {
 }
 
 .output-display .total .amount-display {
-  font-size: 42px;
+  font-size: 2rem;
   font-weight: 700;
   color: var(--strong-cyan);
 }
 
 .output-display .btn {
   width: 100%;
-  height: 50px;
+  height: 45px;
   font-family: inherit;
-  font-size: 18px;
+  font-size: 1.1rem;
   font-weight: 700;
   background-color: var(--dark-grayish-cyan);
   color: var(--very-dark-cyan);
   border: none;
+  border-radius: 5px;
   opacity: 0.7;
   cursor: pointer;
 }
@@ -209,11 +209,71 @@ header {
 
 .attribution {
   margin-top: 20px;
-  font-size: 11px;
+  font-size: 0.7rem;
   text-align: center;
 }
 
 .attribution a {
   text-decoration: none;
   color: hsl(228, 45%, 44%);
+}
+
+@media screen and (max-width: 1000px) {
+  .container {
+    width: 95%;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  body {
+    height: auto;
+    flex-direction: column;
+  }
+
+  header {
+    margin-top: 50px;
+  }
+
+  .container {
+    flex-direction: column;
+    gap: 30px;
+    width: 100%;
+    padding: 20px;
+  }
+
+  .input-display,
+  .output-display {
+    width: 100%;
+  }
+
+  .output-display {
+    padding: 40px 20px;
+  }
+
+  .output-display .btn {
+    margin-top: 30px;
+  }
+
+  .attribution {
+    margin-top: 20px;
+    position: sticky;
+    bottom: 10px;
+  }
+}
+
+@media screen and (max-width: 300px) {
+
+  .output-display .total {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-items: start;
+    justify-content: space-between;
+  }
+
+  .output-display .total .text {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+  }
 }
